# dragonfire-engine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/client/: Cargo.toml
crates/client/src/: config.rs  game.rs  lib.rs
crates/client/src/game/: input.rs
crates/engine/: Cargo.toml
crates/engine/src/: filesystem.rs  lib.rs
crates/rendering/: Cargo.toml  build.rs
crates/rendering/src/: lib.rs
crates/rendering/src/vulkan/: engine.rs  material.rs  mesh.rs  texture.rs
crates/rendering/src/vulkan/engine/: alloc.rs  init.rs  pipeline.rs  swapchain.rs
crates/rendering/src/vulkan/material/: creation.rs  database.rs  material_info.sql
crates/rendering/src/vulkan/shaders/: base.vert
crates/server/: Cargo.toml
crates/server/src/: main.rs
