[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
rendering = { path = "../rendering" }
winit = "0.26.1"
raw-window-handle = "0.3.4"
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.12.0"
figment = { version = "0.10.6", features = ["env", "toml"]}
fern = { version = "0.6.1", features = ['colored'] }
chrono = "0.4.19"