[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
parking_lot = "0.12.0"
once_cell = "1.12.0"
log = "0.4.17"
uom = { version = "0.32.0", features = ["use_serde"] }
serde = { version = "1.0.137", features = ["derive"] }
smallvec = { version = "1.8.0", features = ["union", "serde", "const_generics", "const_new", "write"] }
directories = "4.0.1"
shipyard = "0.5.0"
wasmtime = "0.38.1"