[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
ash = { version = "0.37.0+1.3.209", optional = true }
ash-window = { version = "0.10.0", optional = true }

[features]
default = ['vulkan']
vulkan = ['ash', 'ash-window']