[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
ash = { version = "0.37.0+1.3.209", optional = true }
ash-window = { version = "0.10.0", optional = true }
raw-window-handle = "0.3.4"
serde = { version = "1.0.137", features = ["derive"] }
smallvec = { version = "1.8.0", features = ["union", "serde", "const_generics", "const_new", "write"] }
itertools = "0.10.3"
crossbeam-channel = "0.5.4"
parking_lot = "0.12.1"
log = "0.4.17"

[features]
default = ['vulkan', 'validation-layers']
vulkan = ['ash', 'ash-window']
validation-layers = []