[package]
name = "rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
ash = { version = "0.37.0+1.3.209", optional = true }
ash-window = { version = "0.10.0", optional = true }
raw-window-handle = "0.3.4"
serde = { version = "1.0.137", features = ["derive"] }
smallvec = { version = "1.8.0", features = ["union", "serde", "const_generics", "const_new", "write"] }
itertools = "0.10.3"
crossbeam-channel = "0.5.4"
parking_lot = "0.12.1"
log = "0.4.17"
vk-mem = { version = "0.2.3", git = "https://github.com/JoshBmillikan/vk-mem-rs.git", optional = true }
once_cell = "1.12.0"
nalgebra = "0.31.0"
uom = { version = "0.32.0", features = ["use_serde"] }
obj-rs = "0.7.0"
scopeguard = "1.1.0"
rusqlite = { version = "0.27.0", features = ["blob", "bundled"] }
spirv-reflect = "0.2.3"
memoffset = "0.6.5"

[features]
default = ['vulkan', 'validation-layers']
vulkan = ['ash', 'ash-window', 'vk-mem']
validation-layers = ['vulkan']